Ya tiene fondo de Pokelitos (Sólo el Index)

--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bonito.css">
     <title>Inicio</title>
 </head>
-<body>
-    hace falta colocar dos botones ;-;
+<body background="imagenes/Pokelitos.jpg">
+    <div class="contenedor">
+        <div class="titulo">
+            <p>Página kawaii UwU</p>
+        </div>
+        <div class="centrar">
+            <div class="bloquecitos">
+             <img src="imagenes/bonitosuwu.jpg" class="fotito">
+            </div>
+            <div class="bloquecitos">
+                <p class="listita">Estos son todos mis trabajos:</p>
+                <ul class="lista">
+                    <a href="cesar.html"><li>Cifrado Cesar.</li></a>
+                    <a href="viggener.html"><li>Ejemplo Viggener.</li></a>
+                </ul>
+            </div>
+        </div>
+        <div>
+            <p class="texto">Gatito bailando</p>
+            <a href="https://youtu.be/TtYFw0pAVSI" target="_blank"><button>Miau UwU</button></a>
+        </div>
+    </div>
+    <footer class="patas">Gutiérrez Bueno Elizabeth Andrea 5IV7</footer>
 </body>
 </html>
