Ya está centrado el index. Me da flojera redecorar las demás páginas xD

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="titulo">
             <p>Página kawaii UwU</p>
         </div>
+        <hr>
         <div class="centrar">
             <div class="bloquecitos">
              <img src="imagenes/bonitosuwu.jpg" class="fotito">
@@ -22,11 +23,15 @@
                     <a href="cesar.html"><li>Cifrado Cesar.</li></a>
                     <a href="viggener.html"><li>Ejemplo Viggener.</li></a>
                 </ul>
+                <br>
             </div>
         </div>
+        <hr>
         <div>
             <p class="texto">Gatito bailando</p>
-            <a href="https://youtu.be/TtYFw0pAVSI" target="_blank"><button>Miau UwU</button></a>
+            <center>
+                <a href="https://youtu.be/TtYFw0pAVSI" target="_blank"><button class="boton">Miau UwU</button></a>
+            </center>
         </div>
     </div>
     <footer class="patas">Gutiérrez Bueno Elizabeth Andrea 5IV7</footer>
