--- a/cesar.html
+++ b/cesar.html
@@ -7,6 +7,7 @@
     <title>Ejemplo Cesar</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+<body background="imagenes/Pokelitos.jpg">
             <br>
             <center><h3>Cifrado Cesar</h3></center>
             <br>
