--- a/viggener.html
+++ b/viggener.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 </head>
+<body background="imagenes/Pokelitos.jpg">
             <br>
             <center><h3>Cifrado Viggener</h3></center>
             <br>
